--- a/Public-RestService.yml
+++ b/Public-RestService.yml
@@ -1,3 +1,31 @@
-server.port=0
-eureka.instance.instanceId=${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:{random.value}}}
-eureka.client.serviceUrl.defaultZone=http://192.168.99.100:8761/eureka/
+#Component Info 
+info:
+ component: Public-RestService
+ 
+#Port - If 0 get random port
+server: 
+ port: 0
+ 
+#Eureka Instance ID
+eureka:
+ instance:
+  instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:{random.value}}}
+ client:
+  serviceUrl:
+   defaultZone: http://192.168.99.100:8761/eureka/
+ 
+#Service Registration Method 
+cloud:
+ services:
+  registrationMethod: route
+ 
+#Disable HTTP Basic Authentication
+security:
+ basic:
+  enabled: false
+
+rest:
+  service:
+    cloud:
+      config:
+        example: "hello world!!"
